syntax = "proto3";

option go_package = "course.project/authentication";

message Constant {
    enum Status {
        NORMAL = 0;
        FAILED = 1;
        ONLINE = 2;
    }
}

service Authentication {
    rpc Login(UserInfo) returns (LoginStatus) {}
    rpc Logout(LoginToken) returns (LoginStatus) {}
}

message UserInfo {
    string user_name = 1;
    string encoded_password = 2;
}

message LoginStatus {
    int32 status = 1;
    LoginToken login_token = 2;
}

message LoginToken {
    string token = 1;
}